--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "dayjs": "^1.8.25",
-    "jwt-decode": "^2.2.0",
-    "react": "^16.13.1",
-    "react-cookie": "^4.0.3",
-    "react-dom": "^16.13.1",
-    "react-fetching-library": "^1.7.4",
-    "react-notifications-component": "^2.4.0",
-    "react-router-dom": "^5.1.2",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.5.0",
+    "@testing-library/user-event": "7.2.1",
+    "dayjs": "1.8.25",
+    "jwt-decode": "2.2.0",
+    "react": "16.13.1",
+    "react-cookie": "4.0.3",
+    "react-dom": "16.13.1",
+    "react-fetching-library": "1.7.4",
+    "react-notifications-component": "2.4.0",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
-    "spinners-react": "^1.0.3"
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "0.88.2",
+    "spinners-react": "1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
