--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-notifications-component": "2.4.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
+    "recharts": "1.8.5",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.88.2",
     "spinners-react": "1.0.3"
