Added scss files and reworked the colour theme

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "7.2.1",
     "dayjs": "1.8.25",
     "jwt-decode": "2.2.0",
+    "node-sass": "^4.14.1",
     "query-string": "^6.12.1",
     "react": "16.13.1",
     "react-cookie": "4.0.3",
