--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-cookie": "4.0.3",
     "react-dom": "16.13.1",
     "react-fetching-library": "1.7.4",
+    "react-notifications-component": "3.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "2.4.1",
