--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-notifications-component": "3.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
+    "recharts": "2.0.3",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "1.2.1",
     "spinners-react": "1.0.4"
