--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start": "react-scripts start",
     "lint": "eslint --ext .js,.jsx .",
     "lint-fix": "npm run lint -- --fix",
-    "build": "cross-env EXTEND_ESLINT=true react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
